# agentlink-cli

./: .dockerignore  .gitignore  CONFIG_DESIGN.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  install.ps1  install.sh
.github/workflows/: release-homebrew.yml  release.yml
homebrew-tap/: README.md  agentlink-cli.rb
scripts/: build-release.sh  sign-release.sh  update-homebrew.sh
src/: config.rs  main.rs  output.rs
src/api/: generated.rs  mod.rs
src/chat/: interactive.rs  mod.rs
src/commands/: agent.rs  api_key.rs  auth.rs  chat.rs  config.rs  events.rs  feed.rs  friend.rs  message.rs  messages.rs  mod.rs  network.rs  notifications.rs  posts.rs  tasks.rs  update.rs  user.rs
src/commands/tasks/: mod.rs  publish.rs
src/config/: mod.rs
src/models/: mod.rs
src/utils/: output.rs
tests/: cli_help_output.rs  cli_social_smoke.rs  cli_tasks_smoke.rs
